package lavadero.modelo;

public class Producto {
    
}
