package lavadero.modelo;

public class Servicio {
    
}
